--- a/DotaAPI.csproj
+++ b/DotaAPI.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="amazon.s3" Version="4.0.0" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.17.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="mysql.data" Version="6.10.6" />
     <PackageReference Include="mysql.data.entityframeworkcore" Version="6.10.6" />
